# ai_divination

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  Taskfile.yml  deploy-config.example.json  dev.ps1  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: daily-preload.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  divination.py  horoscope.py  interpretation.py  liuyao.py  main.py  redis_client.py  tarot_v2.py  translate.py
backend/app/models/: __init__.py  divination_v2.py
backend/app/routers/: __init__.py  admin.py  auth.py  divination.py  divination_v2.py  horoscope.py  preload.py
tests/: test_smoke.py
web/: next.config.js  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  translations.ts
web/src/components/divination/: DivinationView.tsx  index.ts
web/src/components/divination/liuyao/: CoinToss.tsx  HexagramDisplay.tsx  LineDisplay.tsx  LiuyaoAI.tsx  LiuyaoManual.tsx  index.ts
web/src/components/divination/tarot/: CardDeck.tsx  CardReveal.tsx  SpreadDisplay.tsx  TarotAI.tsx  TarotManual.tsx  index.ts
web/src/hooks/: index.ts  useDivination.ts  useLiuyao.ts  useTarot.ts
web/src/lib/: api.ts  liuyao.ts  tarot.ts
web/src/types/: divination.ts
